--- a/templates/createAssignment.html
+++ b/templates/createAssignment.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/da5943c57b.js" crossorigin="anonymous"></script>
     <title>Document</title>
 
 
@@ -15,11 +18,11 @@
     </div> -->
     <section class="hero is-fullheight m-2">
         <div class="hero-head mb-1">
-            <a class="button is-small"> < Back to dashboard</a>
+            <a class="button is-small" href="{{BASE_PATH}}/"> < Back to dashboard</a>
         </div>
         <div class="hero-body has-background has-text-centered">
             <div class="container is-widescreen  ">
-                <div class="container has-text-justified">
+                <div class="container is-max-tablet has-text-justified">
                     <section id="Pagetitle" class="section is-small ">
                         <h1 class="title">Buat tugas baru</h1>
                     </section>
@@ -29,18 +32,18 @@
                         
                         <div id="Titleinp">
                             <label for="title" class="label">Judul Tugas</label>
-                            <input name="title" class="input" id="AsgTitle" placeholder="Judul tugas"></input>
+                            <input name="title" class="input" id="AsgTitle" placeholder="Judul tugas" required></input>
                         </div>
                         <br>
                         <div id="Targetinp">
                             <label for="targetEmail" class="label">Redipient's Email</label>
-                            <input type="email" name="targetEmail" id="tgtEM"  class="input" placeholder="masukkan email penerima tugas" ><br>
+                            <input type="email" name="targetEmail" id="tgtEM"  class="input" placeholder="masukkan email penerima tugas" required><br>
                         </div>
                         <br>
                         <br>
                         <div id="Descinp">
                             <label for="desc" class="label"> Description</label>
-                            <textarea name="desc" id="AsgDesc" class="textarea" placeholder="Deskripsi tugas"></textarea>
+                            <textarea name="desc" id="AsgDesc" class="textarea" placeholder="Deskripsi tugas" required></textarea>
                         </div>
                         
                         <!-- <input type="checkbox" name="outsideDBcheck" id="outsideDBcheck" hidden> -->
@@ -49,13 +52,51 @@
 
                         <div id="Duedateinp" >
                             <label for="duedate" class="label is-small">Berikan tenggat: </label>
-                            <input name="duedate" id="AsgDuedate" type="datetime-local"   /><br><br>
+                            <input name="duedate" id="AsgDuedate" type="datetime-local"   required/><br><br>
                         </div>
-                        <button type="submit" class="button is-primary">Submit</button>
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            <ul class=flashes>
+                            {% for category, message in messages %}
+                            <li class="{{ category }}">{{ message }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                        {% endwith %}<br>
+                        <button type="submit" id="submit" class=" button is-primary" >Submit</button>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+    <script>
+        function qSelect(query) {
+            return document.querySelector(query)
+        }
+        $(document).ready(function () {
+
+            var a = new Date();
+            var a = new Date(a - (a.getTimezoneOffset() * 60 * 1000) + 1000*60*60*24*2);
+            a.setSeconds(null);
+            a.setMilliseconds(null);
+            document.querySelector('#AsgDuedate').value = a.toISOString().slice(0,-1);
+
+
+            const queryString = window.location.search;
+            const urlParams = new URLSearchParams(queryString);
+            qSelect("#AsgTitle").value = urlParams.get('titleBefore'); 
+            qSelect("#AsgDesc").value = urlParams.get('descBefore');
+            if (urlParams.get('dueDateBefore') != null){
+                qSelect("#AsgDuedate").value = urlParams.get('dueDateBefore');
+            }
+            window.history.replaceState({}, document.title,   window.location.origin + window.location.pathname);
+
+            
+            $("#submit").click(function() { 
+                $("#submit").prop('disabled');
+            })
+        });
+    </script>
+   
 </body>
 </html>
