--- a/templates/seeAssignmentCreator.html
+++ b/templates/seeAssignmentCreator.html
@@ -11,90 +11,111 @@
 </head>
 <body class="m-4">
 
-    <div class=" my-5 hero-head mb-1">
-        <a class="button is-small"> < Back to dashboard</a>
-    </div>
-    <!-- <h1 class="title">{result[3]}-v{result[1]}</h1> -->
-    <h1 class="title">Title</h1>
-    <h6 class="subtitle is-6">Version: 2</h6>
+    <section>
+        <div class=" my-5 hero-head mb-1">
+            <a class="button is-small" href="{{ BASE_PATH }}/"> < Back to dashboard</a>
+        </div>
+    </section>
+
+    <section class="container is-max-tablet">
+
+        <!-- <h1 class="title">{result[3]}-v{result[1]}</h1> -->
+        <h1 class="title">{{ result[3] }}</h1>
+        <h6 class="subtitle is-6">version: {{ result[1] }}</h6>
+        
+        <a href="{{BASE_PATH}}/AssignmentHistory/{{assignmentID}}?ID={{accesserID}}"> Lihat versi lain</a>
+        <br><span>status: <b>{{ result[2] }}</b></span>
+        <!-- <br><span>status: <b>Diberikan</b></span> -->
     
-    <a href="{varscollection.BASE_PATH}/AssignmentHistory/{assignmentID}?ID={accesserID}"> Lihat versi lain</a>
-    <!-- <br><span>dari: <b>{giverData[2]}</b> | status: <b>{result[2]}</b></span> -->
-    <br><span>dari: <b>Nanda</b> | status: <b>Diberikan</b></span>
-
-    <div class="content">
-
-        <section class="section has-text-justified">
-            <!-- <h2>{result[4]}</h2><br> -->
-            <p class="">Anda diharuskan untuk membuat a,b,c dengan framework d,e,f juga jangan lupa untum membagi tugas dengan f,g,h</p><br>
-        </section>
-        
-        
-        <h6 class="subtitle is-6">File Available:</h6>
-        <ul>
-            <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">satu.pdf</a></li>
-            <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">dua.xslx</a></li>
-            <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">tiga.docx</a></li>
+        <div class="content">
+    
+            <section class="section has-text-justified">
+                <span>Deskripsi: </span>
+                <p >{{ result[4] }}</p><br>
+                <!-- <p class="">Anda diharuskan untuk membuat a,b,c dengan framework d,e,f juga jangan lupa untum membagi tugas dengan f,g,h</p><br> -->
+            </section>
             
-        </ul>
-        
-    </div>
-
-    <div id="ifMenungguReview">
-        <!-- <input id="reviseToggle" name="reviseToggle" type="checkbox" class="checkbox">
-            <label for="reviseToggle">Minta revisi</label> 
-        </input><br> -->
-        
-
-        <div id="reviseFormWrap" class="box" style="display: none;">
             
-            <h4 class="title is-4">Tambahkan Revisi</h4>
-
-            <form id="reviseForm"  method="post" action="{varscollection.BASE_PATH}/revise">
-                <input type="hidden" name="requesterID" value="{accesserID}" hidden></input>
-                <input type="hidden" name="aid" value="{result[0]}" hidden></input>
-                <input type="hidden" name="ver" value="{result[1]}" hidden></input>
-
-                <div style="border: 2px solid black; padding:10px;"  >
-                    <textarea name="desc" class="textarea" placeholder="Berikan deskripsi tentang revisi"></textarea><br><br>
-                    <label for="duedate" class="label">Berikan tenggat:</label>
-                    <input name="duedate" id="duedate" type="datetime-local" /><br>
-                </div>
+            <h6 class="subtitle is-6">File Available:</h6>
+            <ul>
+                {{ fileListHTML|safe }}
+                <!--             
+                <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">satu.pdf</a></li>
+                <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">dua.xslx</a></li>
+                <li><a href="{varscollection.BASE_PATH}/dwnld/{assignmentID}/{version}/{filename}?ID={accesserID}">tiga.docx</a></li>
+                 -->
+            </ul>
+            
+        </div>
+        {% if (result[2]|string).upper() == 'MENUNGGU-REVIEW' %}
+        <div id="ifMenungguReview">
+            <!-- <input id="reviseToggle" name="reviseToggle" type="checkbox" class="checkbox">
+                <label for="reviseToggle">Minta revisi</label> 
+            </input><br> -->
+            
+    
+            <div id="reviseFormWrap" class="box" style="display: none;">
                 
+                <h4 class="title is-4">Tambahkan Revisi</h4>
+    
+                <form id="reviseForm"  method="post" action="{{BASE_PATH}}/revise">
+                    <input type="hidden" name="requesterID" value="{{accesserID}}" hidden></input>
+                    <input type="hidden" name="aid" value="{{result[0]}}" hidden></input>
+                    <input type="hidden" name="ver" value="{{result[1]}}" hidden></input>
+    
+                    <div   >
+                        <textarea name="desc" class="textarea" placeholder="Berikan deskripsi tentang revisi"></textarea><br><br>
+                        <label for="duedate" class="label">Berikan tenggat:</label>
+                        <input name="duedate" id="duedate" type="datetime-local" /><br>
+                    </div>
+                    
+                    <div class="buttons is-right">
+                        <button type="button"id="closeReviseForm" class="button is-secondary" name="feedback" value="Revise">Tutup</button> 
+                        <button type="submit" class="button is-primary" name="feedback" value="Revise">Minta revisi</button> 
+                    </div>
+                </form>
+            </div>
+            <form id="reviseForm" method="post" action="{{BASE_PATH}}/acceptSubmis">
+                <input type="hidden" name="submitterID" value="{{accesserID}}"></input>
+                <input type="hidden" name="aid" value="{{result[0]}}"></input>
+                <input type="hidden" name="ver" value="{{result[1]}}"></input>
                 <div class="buttons is-right">
-                    <button type="button"id="closeReviseForm" class="button is-secondary" name="feedback" value="Revise">Tutup</button> 
-                    <button type="submit" class="button is-primary" name="feedback" value="Revise">Minta revisi</button> 
+                    <button type="button" name="askRevisionBtn" id="askRevisionBtn" class="button is-secondary" value="AcceptSubmission">Minta Revisi</button> 
+                    <button type="submit" name="feedback" class="button is-primary" value="AcceptSubmission">Tandai tugas selesai</button> 
                 </div>
             </form>
-        </div>
-        <form id="reviseForm" method="post" action="{varscollection.BASE_PATH}/acceptSubmis">
-            <input type="hidden" name="submitterID" value="{accesserID}"></input>
-            <input type="hidden" name="aid" value="{result[0]}"></input>
-            <input type="hidden" name="ver" value="{result[1]}"></input>
-            <div class="buttons is-right">
-                <button type="button" name="askRevisionBtn" id="askRevisionBtn" class="button is-secondary" value="AcceptSubmission">Minta Revisi</button> 
-                <button type="submit" name="feedback" class="button is-primary" value="AcceptSubmission">Tandai tugas selesai</button> 
-            </div>
-        </form>
+    
+    
+    
+            <script>
+                function qSelect(query) {
+                    return document.querySelector(query)
+                }
+                $(document).ready(function () {
 
-
-
-        <script>
-
-            
-            $("#askRevisionBtn").click(function() {
-                $("#reviseFormWrap").show();
-                $("#askRevisionBtn").hide()
-            })
-            
-            $("#closeReviseForm").click(function() {
-                $("#reviseFormWrap").hide();
-                $("#askRevisionBtn").show()
-            })
-
-
-        </script>
-    </div>    
+                    var a = new Date();
+                    var a = new Date(a - (a.getTimezoneOffset() * 60 * 1000) + 1000*60*60*24*2);
+                    a.setSeconds(null);
+                    a.setMilliseconds(null);
+                    document.querySelector('#duedate').value = a.toISOString().slice(0,-1);
+                });
+    
+                
+                $("#askRevisionBtn").click(function() {
+                    $("#reviseFormWrap").show();
+                    $("#askRevisionBtn").hide()
+                })
+                
+                $("#closeReviseForm").click(function() {
+                    $("#reviseFormWrap").hide();
+                    $("#askRevisionBtn").show()
+                })
+    
+    
+            </script>
+        </div>    
+        {% endif %}
+    </section>
 
 
     
