--- a/templates/seeAssignmentCreator.html
+++ b/templates/seeAssignmentCreator.html
@@ -35,6 +35,10 @@
                 <!-- <p class="">Anda diharuskan untuk membuat a,b,c dengan framework d,e,f juga jangan lupa untum membagi tugas dengan f,g,h</p><br> -->
             </section>
             
+            <h5 class="is-5 subtitle">Submission</h5>
+            <div class="container content">
+                {{ textSubmission|safe }}
+            </div>
             
             <h6 class="subtitle is-6">File Available:</h6>
             <ul>
